tooling/nargo_cli/tests/snapshots/execution_success/no_predicates_numeric_generic_poseidon/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "to_hash",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "array",
            "length": 10,
            "type": {
              "kind": "field"
            }
          }
        },
        "visibility": "private"
      },
      {
        "name": "enable",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "boolean"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 3,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _117",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21]",
    "public parameters indices : []",
    "return value indices : [_22, _23, _24]",
    "BLACKBOX::RANGE [_20]:1 bits []",
    "BLACKBOX::RANGE [_21]:1 bits []",
    "EXPR [ (-1, _25) 184467440737095516160 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_0, _1, _2, _25] [_26, _27, _28, _29]",
    "EXPR [ (1, _3) (1, _26) (-1, _30) 0 ]",
    "EXPR [ (1, _4) (1, _27) (-1, _31) 0 ]",
    "EXPR [ (1, _5) (1, _28) (-1, _32) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_30, _31, _32, _29] [_33, _34, _35, _36]",
    "EXPR [ (1, _6) (1, _33) (-1, _37) 0 ]",
    "EXPR [ (1, _7) (1, _34) (-1, _38) 0 ]",
    "EXPR [ (1, _8) (1, _35) (-1, _39) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_37, _38, _39, _36] [_40, _41, _42, _43]",
    "EXPR [ (1, _9) (1, _40) (-1, _44) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_44, _41, _42, _43] [_45, _46, _47, _48]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_10, _11, _12, _25] [_49, _50, _51, _52]",
    "EXPR [ (1, _13) (1, _49) (-1, _53) 0 ]",
    "EXPR [ (1, _14) (1, _50) (-1, _54) 0 ]",
    "EXPR [ (1, _15) (1, _51) (-1, _55) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_53, _54, _55, _52] [_56, _57, _58, _59]",
    "EXPR [ (1, _16) (1, _56) (-1, _60) 0 ]",
    "EXPR [ (1, _17) (1, _57) (-1, _61) 0 ]",
    "EXPR [ (1, _18) (1, _58) (-1, _62) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_60, _61, _62, _59] [_63, _64, _65, _66]",
    "EXPR [ (1, _19) (1, _63) (-1, _67) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_67, _64, _65, _66] [_68, _69, _70, _71]",
    "EXPR [ (-1, _72) 368934881474191032320 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_0, _1, _2, _72] [_73, _74, _75, _76]",
    "EXPR [ (1, _3) (1, _73) (-1, _77) 0 ]",
    "EXPR [ (1, _4) (1, _74) (-1, _78) 0 ]",
    "EXPR [ (1, _5) (1, _75) (-1, _79) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_77, _78, _79, _76] [_80, _81, _82, _83]",
    "EXPR [ (1, _6) (1, _80) (-1, _84) 0 ]",
    "EXPR [ (1, _7) (1, _81) (-1, _85) 0 ]",
    "EXPR [ (1, _8) (1, _82) (-1, _86) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_84, _85, _86, _83] [_87, _88, _89, _90]",
    "EXPR [ (1, _9) (1, _87) (-1, _91) 0 ]",
    "EXPR [ (1, _0) (1, _88) (-1, _92) 0 ]",
    "EXPR [ (1, _1) (1, _89) (-1, _93) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_91, _92, _93, _90] [_94, _95, _96, _97]",
    "EXPR [ (1, _2) (1, _94) (-1, _98) 0 ]",
    "EXPR [ (1, _3) (1, _95) (-1, _99) 0 ]",
    "EXPR [ (1, _4) (1, _96) (-1, _100) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_98, _99, _100, _97] [_101, _102, _103, _104]",
    "EXPR [ (1, _5) (1, _101) (-1, _105) 0 ]",
    "EXPR [ (1, _6) (1, _102) (-1, _106) 0 ]",
    "EXPR [ (1, _7) (1, _103) (-1, _107) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_105, _106, _107, _104] [_108, _109, _110, _111]",
    "EXPR [ (1, _8) (1, _108) (-1, _112) 0 ]",
    "EXPR [ (1, _9) (1, _109) (-1, _113) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [_112, _113, _110, _111] [_114, _115, _116, _117]",
    "EXPR [ (-1, _20, _45) (1, _22) 0 ]",
    "EXPR [ (-1, _21, _68) (1, _23) 0 ]",
    "EXPR [ (1, _24) (-1, _114) 0 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
