tooling/nargo_cli/tests/snapshots/execution_success/no_predicates_numeric_generic_poseidon/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "to_hash",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "array",
            "length": 10,
            "type": {
              "kind": "field"
            }
          }
        },
        "visibility": "private"
      },
      {
        "name": "enable",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "boolean"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 3,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _117",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21]",
    "public parameters indices : []",
    "return value indices : [_22, _23, _24]",
    "BLACKBOX::RANGE [(_20, 1)] []",
    "BLACKBOX::RANGE [(_21, 1)] []",
    "EXPR [ (-1, _25) 184467440737095516160 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_0, 254), (_1, 254), (_2, 254), (_25, 254)] [_26, _27, _28, _29]",
    "EXPR [ (1, _3) (1, _26) (-1, _30) 0 ]",
    "EXPR [ (1, _4) (1, _27) (-1, _31) 0 ]",
    "EXPR [ (1, _5) (1, _28) (-1, _32) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_30, 254), (_31, 254), (_32, 254), (_29, 254)] [_33, _34, _35, _36]",
    "EXPR [ (1, _6) (1, _33) (-1, _37) 0 ]",
    "EXPR [ (1, _7) (1, _34) (-1, _38) 0 ]",
    "EXPR [ (1, _8) (1, _35) (-1, _39) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_37, 254), (_38, 254), (_39, 254), (_36, 254)] [_40, _41, _42, _43]",
    "EXPR [ (1, _9) (1, _40) (-1, _44) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_44, 254), (_41, 254), (_42, 254), (_43, 254)] [_45, _46, _47, _48]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_10, 254), (_11, 254), (_12, 254), (_25, 254)] [_49, _50, _51, _52]",
    "EXPR [ (1, _13) (1, _49) (-1, _53) 0 ]",
    "EXPR [ (1, _14) (1, _50) (-1, _54) 0 ]",
    "EXPR [ (1, _15) (1, _51) (-1, _55) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_53, 254), (_54, 254), (_55, 254), (_52, 254)] [_56, _57, _58, _59]",
    "EXPR [ (1, _16) (1, _56) (-1, _60) 0 ]",
    "EXPR [ (1, _17) (1, _57) (-1, _61) 0 ]",
    "EXPR [ (1, _18) (1, _58) (-1, _62) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_60, 254), (_61, 254), (_62, 254), (_59, 254)] [_63, _64, _65, _66]",
    "EXPR [ (1, _19) (1, _63) (-1, _67) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_67, 254), (_64, 254), (_65, 254), (_66, 254)] [_68, _69, _70, _71]",
    "EXPR [ (-1, _72) 368934881474191032320 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_0, 254), (_1, 254), (_2, 254), (_72, 254)] [_73, _74, _75, _76]",
    "EXPR [ (1, _3) (1, _73) (-1, _77) 0 ]",
    "EXPR [ (1, _4) (1, _74) (-1, _78) 0 ]",
    "EXPR [ (1, _5) (1, _75) (-1, _79) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_77, 254), (_78, 254), (_79, 254), (_76, 254)] [_80, _81, _82, _83]",
    "EXPR [ (1, _6) (1, _80) (-1, _84) 0 ]",
    "EXPR [ (1, _7) (1, _81) (-1, _85) 0 ]",
    "EXPR [ (1, _8) (1, _82) (-1, _86) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_84, 254), (_85, 254), (_86, 254), (_83, 254)] [_87, _88, _89, _90]",
    "EXPR [ (1, _9) (1, _87) (-1, _91) 0 ]",
    "EXPR [ (1, _0) (1, _88) (-1, _92) 0 ]",
    "EXPR [ (1, _1) (1, _89) (-1, _93) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_91, 254), (_92, 254), (_93, 254), (_90, 254)] [_94, _95, _96, _97]",
    "EXPR [ (1, _2) (1, _94) (-1, _98) 0 ]",
    "EXPR [ (1, _3) (1, _95) (-1, _99) 0 ]",
    "EXPR [ (1, _4) (1, _96) (-1, _100) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_98, 254), (_99, 254), (_100, 254), (_97, 254)] [_101, _102, _103, _104]",
    "EXPR [ (1, _5) (1, _101) (-1, _105) 0 ]",
    "EXPR [ (1, _6) (1, _102) (-1, _106) 0 ]",
    "EXPR [ (1, _7) (1, _103) (-1, _107) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_105, 254), (_106, 254), (_107, 254), (_104, 254)] [_108, _109, _110, _111]",
    "EXPR [ (1, _8) (1, _108) (-1, _112) 0 ]",
    "EXPR [ (1, _9) (1, _109) (-1, _113) 0 ]",
    "BLACKBOX::POSEIDON2_PERMUTATION [(_112, 254), (_113, 254), (_110, 254), (_111, 254)] [_114, _115, _116, _117]",
    "EXPR [ (-1, _20, _45) (1, _22) 0 ]",
    "EXPR [ (-1, _21, _68) (1, _23) 0 ]",
    "EXPR [ (1, _24) (-1, _114) 0 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": []
}
